--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
   Adafruit GFX Library
   miguelbalboa/MFRC522
   adafruit/Adafruit DRV2605 Library
-  Adafruit RTClib
+  adafruit/RTClib@^2.1.3
