--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,11 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+upload_port = COM6
+monitor_speed = 115200	
 lib_deps = 
 	Adafruit SSD1306
 	Adafruit GFX Library
 	miguelbalboa/MFRC522
 	adafruit/Adafruit DRV2605 Library
-	adafruit/RTClib@^2.1.3
+	adafruit/RTClib@^2.1.4
